--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
     <h1 style="background-color:rgb(0, 255, 242)">This is a heading</h1>
-    <p>This is a paragraph. </p>
+    <p>This is a paragraph. My name is Omar. I am 15 years old and I go to ACS. </p>
     <p>Click <a href="http://translate.google.com">here</a> to visit Google translate.</p>
-
+image.png 
 </body>
 </html>
 
+                                                                           
