--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>This is a paragraph. My name is Omar. I am 15 years old and I go to ACS. I support chelsea football club as well. </p>
     <p>Click <a href="https://www.chelsea.com/">here</a> to visit the chelsea website.</p>
     http://res.cloudinary.com/chelsea-production/image/upload/c_fit,h_630,w_1200/v1/site-assets/Backgrounds/Screensaver
+    <a href="3.html">This is a link to my third page of html</a>
     <h2 Thank you for reading! ></h2>
 </body>
 </html>
