--- a/2.html
+++ b/2.html
@@ -11,6 +11,6 @@
     <h1 style="background-color:rgb(255, 0, 0)">This is a heading</h1>
     <p>This is a paragraph in my second page. </p>
     <p>Click <a href="https://translate.google.com/">here</a> to visit Google Translate.</p>
-
+    <a href="index.html">This is a link to my index html page</a>
 </body>
 </html>
