--- a/3.html
+++ b/3.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="mystyle.css">
-    <title>Title</title>
-    <style>
+   <link rel="stylesheet" href="mystyle.css">
+   <title>My website</title>
+   <style>
 
-    </style>
+
+   </style>
 </head>
 <body>
-    <h1 style="background-color:rgb(0, 255, 17)">This is a heading</h1>
-    <p>This is a paragraph for my third page. </p>
-    <p>Click <a href="https://www.nike.com/ae/">here</a> to visit Nike.</p>
-    <a href="2.html">This is a link to my second page of html</a>
+   <h1 style="background-color:rgb(0, 255, 17)">This is a heading</h1>
+   <p>This is a paragraph for my third page. </p>
+   <p>Click <a href="https://www.nike.com/ae/">here</a> to visit Nike.</p>
+   <a href="2.html">This is a link to my second page of html</a>
 </body>
 </html>
